change name file js (app.js) in html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <script src="ressources/js/jquery-1.9.1.js"></script>
   <script src="ressources/js/jquery-ui.js"></script>
-  <script src="ressources/js/function.js"></script>
+  <script src="ressources/js/app.js"></script>
   <link rel="stylesheet" href="ressources/css/style.css" />
   
 </head>
