--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="ressources/js/jquery-1.9.1.js"></script>
   <script src="ressources/js/jquery-ui.js"></script>
   <script src="ressources/js/app.js"></script>
-  <link rel="stylesheet" href="ressources/css/style.css" />
-  
+  <!-- <link rel="stylesheet" href="ressources/css/style.css" />
+     -->
 </head>
 <body>
 	<li id="zone_critere_1" class="zone_critere">
